changed background-color for about and contact section

--- a/partials/_about.scss
+++ b/partials/_about.scss
@@ -1,7 +1,7 @@
 /* ABOUT TEAM STYLES */
 
 .about {
-	background-color: #d3d3d3;
+	background-color: #efefef;
 	padding: 100px 0;
 	min-height: 100vh;
 	h2 {
