--- a/styles/style.css
+++ b/styles/style.css
@@ -430,7 +430,7 @@ header {
 
 /* ABOUT TEAM STYLES */
 .about {
-  background-color: #d3d3d3;
+  background-color: #efefef;
   padding: 100px 0;
   min-height: 100vh;
 }
@@ -598,7 +598,6 @@ ol.flickity-page-dots {
 
 /*SERVICE CARDS STYLES */
 .dogServices {
-  padding-top: 50px;
   background-color: #709fc1;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -782,7 +781,7 @@ ol.flickity-page-dots {
 
 /* CONTACT STYLES */
 .contact {
-  background-color: #d3d3d3;
+  background-color: #efefef;
   min-height: 100vh;
   padding: 100px 0;
 }
@@ -806,7 +805,7 @@ ol.flickity-page-dots {
 
 .icon i {
   font-size: 5rem;
-  color: #f5f5f5;
+  color: #008ed6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -818,7 +817,6 @@ ol.flickity-page-dots {
 }
 
 .icon i:hover {
-  color: #709fc1;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
