--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -19,7 +19,7 @@
 
 .icon i {
 	font-size: 5rem;
-	color: $blue-heading;
+	color: $black-shade;
 	display: flex;
 	justify-content: center;
 	transition: 400ms ease-in;
