--- a/styles/style.css
+++ b/styles/style.css
@@ -805,7 +805,7 @@ ol.flickity-page-dots {
 
 .icon i {
   font-size: 5rem;
-  color: #008ed6;
+  color: #262626;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
