--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -87,6 +87,7 @@ select {
 	width: 550px;
 	border-radius: 5px;
 	padding: 25px;
+	background-color: #fff;
 }
 
 input {
@@ -94,7 +95,7 @@ input {
 	font-size: 1.8rem;
 	justify-content: center;
 	flex-wrap: wrap;
-	background-color: $off-white;
+	background-color: #fff;
 	color: $black-shade;
 	width: 550px;
 	padding: 25px;
@@ -108,6 +109,7 @@ textarea {
 	margin-top: 20px;
 	padding: 25px;
 	font-size: 1.8rem;
+	background-color: #fff;
 	border: 1px solid $black-shade;
 }
 
