--- a/partials/_services.scss
+++ b/partials/_services.scss
@@ -88,8 +88,8 @@
 }
 
 .dogServices .back {
-	background-color: #d3d3d3;
-	color: #f5f5f5;
+	background-color: #efefef;
+	color: $off-white;
 	-webkit-transform: rotateY(180deg);
 	transform: rotateY(180deg);
 	position: absolute;
