--- a/styles/style.css
+++ b/styles/style.css
@@ -872,8 +872,7 @@ iframe:hover {
 
 .formInfo h3 {
   font-size: 2.5rem;
-  font-style: italic;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .formInfo p {
@@ -1293,7 +1292,7 @@ footer a:hover {
     padding-top: 15px;
   }
   .contact .formInfo h3 {
-    font-style: unset;
+    font-size: 2.2rem;
     line-height: 1.2;
   }
   .contactContainer {
