adjusted h2::after element in media queries

--- a/partials/_mediaQueries.scss
+++ b/partials/_mediaQueries.scss
@@ -106,6 +106,9 @@
 /* MEDIUM TO LARGE MOBILE */
 
 @media screen and (max-width: 700px) {
+	h2::after {
+		left: calc(100% - 60%);
+	}
 	.hamburger,
 	.exitResponsive {
 		display: block;
@@ -290,6 +293,9 @@
 /* SMALL MOBILE */
 
 @media screen and (min-width: 300px) and (max-width: 450px) {
+	h2::after {
+		left: calc(100% - 65%);
+	}
 	.menu ul a {
 		font-size: 4rem;
 		padding: 35px;
